--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "ifthenx.doc.tar.xz": 879a50c085128d636c16a5024370b703a1a26078
-  "ifthenx.tar.xz": f733930f958c54fb8b24d6c96e3bd2e5dd0ee19a
+  ifthenx.doc.r25819.tar.xz: 507f07e60b7dae7b165269ea69ff1f371655b088
+  ifthenx.r25819.tar.xz: 4587e7231abf4b60851993397017253e733be16a
